// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TotalBarStyled /> should render the component \`without width\` if it is 0 1`] = `
<span
  className="sc-bdVaJa bWpCqZ"
  type="actual"
  width={0}
/>
`;

exports[`<TotalBarStyled /> should render the component as \`actual type\` 1`] = `
<span
  className="sc-bdVaJa bPlLMc"
  type="actual"
  width={100}
/>
`;

exports[`<TotalBarStyled /> should render the component as \`forecast type\` 1`] = `
<span
  className="sc-bdVaJa dhPEee"
  type="forecast"
  width={100}
/>
`;
